--- a/src/react/pages/register/register.css
+++ b/src/react/pages/register/register.css
@@ -1,16 +1,21 @@
 .formcontainer {
-	padding-top: 6vh;
+	padding: 2vh 10vw 15vh 10vw;
 	background-color: var(--color-background);
 	/* max-width: 60vw; */
 }
 
-form h1 {
+p.title.register {
 	font-size: 72px;
+	color: white;
+	align-self: flex-start;
+	margin-left: 10vw;
 }
 
-h1 {
-	font-family: Cinzel, sans-serif;
-	font-weight: 400;
+.subtitle.register{
+	color: #878787;
+	font-size: 26px;
+	border-left: #878787 solid 1px;
+	padding-left: 3vw;
 }
 
 .forminput {
@@ -27,25 +32,24 @@ h1 {
 
 label {
 	color: var(--color-secondary);
-	font-family: Futura;
 	font-size: 1rem;
 }
 
 input {
-	background-color: #ffffff00;
+	background-color: #aeadad;
 }
 
 input:not([type='button']) {
 	border: var(--color-secondary) 1px solid;
 	padding: 1vh 0.5vw;
-	width: 40vw;
+	width: 36vw;
 	height: 38px;
 }
 
-/* button {
+button.register {
 	flex-basis: 16rem;
 	min-width: 16rem;
-} */
+}
 
 .buttongroup {
 	margin-top: 12vh;
@@ -60,12 +64,11 @@ input:not([type='button']) {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 0 0 8vh 0;
+	padding: 35vh 0 8vh 0;
 }
 
 h4 {
 	font-size: 1rem;
-	font-family: Futura-MD, sans-serif;
 	font-weight: 300;
 }
 
@@ -91,14 +94,12 @@ h4 {
 
 h5 {
 	font-size: 1rem;
-	font-family: Futura-MD, sans-serif;
 	font-weight: 200;
 	margin-top: 6vh;
 }
 
 #formtitles {
 	margin-top: 16vh;
-	font-family: Futura;
 }
 
 .registersec p {
@@ -118,14 +119,13 @@ h5 {
 
 .error {
 	color: rgb(196, 7, 7);
-	font-family: Futura-LT, serif;
 	font-size: 0.9rem;
 	width: 100%;
 	height: 1rem;
 }
 
 .dropdown > * {
-	width: 40vw;
+	width: 36vw;
 }
 
 .special {
@@ -156,7 +156,7 @@ h5 {
 		margin: 0 2rem;
 	}
 
-	button {
+	button.register {
 		min-width: 0;
 	}
 
@@ -213,18 +213,32 @@ h5 {
 	.dropdown > * {
 		width: 80vw;
 	}
+
+	.react-select-container {
+		width: 80vw;
+	}
+
+	.react-select__value-container {
+		font-size: 1rem;
+		height: max(fit-content, 80vw);
+	}
+	
+	.react-select__indicators-container {
+		height: max(fit-content, 80vw);
+	}
 }
 /* Css for react select */
 
 .react-select-container {
-	color: var(--color-secondary);
-	background-color: #ffffff00;
-	border: var(--color-secondary) 1px solid;
+	color: black;
+	background-color: #aeadad;
+	border: black 1px solid;
 	border-radius: 0px;
+	max-width: 36vw;
 }
 
 .react-select__control {
-	background-color: #ffffff00 !important;
+	background-color: #aeadad !important;
 	border-radius: 0px;
 	height: max(fit-content, 38px);
 	border: none !important;
@@ -246,12 +260,10 @@ h5 {
 .react-select__input-container,
 .react-select__multi-value,
 .react-select__placeholder {
-	font-family: Futura, serif;
 	font-size: 1rem;
 }
 
 .react-select__option {
-	font-family: Futura-LT, serif;
 	font-size: 1rem;
 }
 
@@ -277,7 +289,6 @@ h5 {
 }
 
 .react-select__value-container {
-	font-family: Futura;
 	font-size: 1rem;
 	height: max(fit-content, 38px);
 }
@@ -287,10 +298,12 @@ h5 {
 }
 
 tr:nth-child(odd) {
-	background-color: #fff1dc;
+	background-color: #82817E;
+	color: #FFFF;
 }
 tr:nth-child(even) {
-	background-color: #fffaf1;
+	background-color: #D7D7D7;
+	color: #000000;
 }
 
 td:first-child {
@@ -304,4 +317,8 @@ td:last-child {
 td > p {
 	color: #242424;
 	padding: 0 0.5rem;
+}
+
+.inputcontainer:first-of-type{
+	margin-top: 15vh;
 }
