--- a/src/react/components/navbar/navbar.css
+++ b/src/react/components/navbar/navbar.css
@@ -3,6 +3,12 @@ a:hover {
 	text-decoration: none;
 }
 
+.blur{
+	position: fixed;
+	backdrop-filter: blur(10px);
+	background: #1c1b1bb0;
+}
+
 nav {
 	background-color: var(--color-accent);
 	padding: 5px 2rem;
@@ -12,7 +18,6 @@ nav {
 	display: flex;
 	transition: top 0.3s;
 	justify-content: center;
-	min-height: 12vh;
 	width: 90vw;
 	left: 0;
   right: 0;
@@ -33,6 +38,7 @@ nav li a:hover {
 
 .menu {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	list-style: none;
 	transition: 0.5s;
@@ -54,7 +60,7 @@ nav li a:hover {
 	nav {
 		display: block;
 		align-items: center;
-		padding-top: 20vw;
+		padding-top: 0;
 		transition: all 0.5s ease-in-out;
 	}
 
@@ -67,16 +73,31 @@ nav li a:hover {
 	.menu {
 		display: none;
 	}
+
 	.menu#active,
 	.toggler {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		padding: 0;
-		width: 48px;
-  height: 48px;
+		padding: 0;		
+	}
+	.toggler{
+		flex-direction: row !important;
+  justify-content: flex-start !important;
+  align-items: center !important;
+  width: 100%;
 	}
 	.toggler {
 		font-size: 2rem;
 	}
+}
+
+.navtitle{
+	font-size: 22px;
+	margin-left: 25%;
+  }
+
+.toggler svg{
+	width: 32px;
+  	height: 32px;
 }
