--- a/src/react/components/navbar/navbar.css
+++ b/src/react/components/navbar/navbar.css
@@ -38,7 +38,7 @@ nav li a:hover {
 
 .menu {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	align-items: center;
 	list-style: none;
 	transition: 0.5s;
@@ -72,6 +72,7 @@ nav li a:hover {
 
 	.menu {
 		display: none;
+		flex-direction: column;
 	}
 
 	.menu#active,
