--- a/src/react/pages/home/home.css
+++ b/src/react/pages/home/home.css
@@ -115,6 +115,7 @@ ul#clock li{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	padding: 12px;
 }
 
 ul#clock p{
@@ -125,6 +126,7 @@ ul#clock p{
 ul#clock h4{
 	font-size: 32px;
 	color: white;
+	padding: 2px;
 }
 
 .location-sec {
