--- a/src/react/pages/home/home.css
+++ b/src/react/pages/home/home.css
@@ -99,6 +99,13 @@ h2{
 		font-size: 24px;
 	}
 
+	.t{
+		width: auto !important;
+	}
+}
+
+.t{
+	width: 160px;
 }
 
 .location-sec h3{
@@ -115,18 +122,19 @@ ul#clock li{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 12px;
+	padding: 6px;
 }
 
 ul#clock p{
 	font-size: 128px;
 	color: white;
+	text-align: center;
 }
 
 ul#clock h4{
 	font-size: 32px;
 	color: white;
-	padding: 2px;
+	/* padding: 2px; */
 }
 
 .location-sec {
